--- a/frontend-challenge/package.json
+++ b/frontend-challenge/package.json
@@ -11,6 +11,10 @@
     "fix": "prettier --write ."
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
